# olio-stellar

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
circuits/: build.sh  gen_input.mjs  gen_transfer_input.mjs  gen_withdraw_fixture.mjs  package-lock.json  package.json  to_soroban_transfer.mjs
circuits/src/: transfer.circom  withdraw.circom
docs/: README.md  SUMMARY.md  cashing-out.md  concepts.md  faqs.md  features.md  glossary.md  how-it-works.md  new-to-crypto.md  practical-privacy.md  quickstart.md  reference.md  security.md  usdc-and-cctp.md  who-its-for.md  why-privacy-matters.md
frontend/: .env.example  next.config.mjs  package.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
programs/olio-intake/: Cargo.toml
programs/olio-pool/: Cargo.toml
programs/olio-pool/src/: fixture.rs  groth16.rs  lib.rs  test.rs  transfer_fixture.rs  withdraw_fixture.rs
programs/olio-pool/test_snapshots/test/: deposit_then_withdraw_moves_funds.1.json  deposit_tree_root_matches_circuit.1.json  double_initialize_rejected.1.json  double_spend_rejected.1.json  transfer_full_flow.1.json  transfer_requires_verifier_key.1.json  unknown_root_rejected.1.json  withdraw_full_flow.1.json  withdraw_unknown_root_rejected.1.json  wrong_secret_rejected.1.json
programs/olio-registry/: Cargo.toml
scripts/: deploy-testnet.sh  parity.cjs
web/: .env.example  biome.json  middleware.ts  migrate-mongo-config.cjs  next.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vitest.config.ts  vitest.setup.ts
web/test/: DashboardShell.test.tsx  (+32 more)
(+195 files in other folders)
