[workspace]
resolver = "2"
members = ["programs/olio-registry", "programs/olio-pool"]
# Vendored passkey-kit smart-wallet — its own workspace pinned to soroban-sdk 23,
# built standalone. Excluded so it never perturbs the soroban-sdk 26 pin here.
exclude = ["vendor/passkey-contracts"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
